=================================
Augmented2 Ruleset for Freeciv v2.6
=================================

2.6.27
Scientist produce only 1 bulb in casie of Anarchy or Fundamental gov.
Taxman produce only 1 gold in case of Anarchy.
Rare tile Volcano added (by Lua script or global warming)
Sacred Cairn can be founded enywhere.
Waterlocks for amplio imported from ampliohexbig

2.6.26
Smooth transition from Temple to Church or Mosque
and from early temple wonders to advanced far-east temple wonders
Trireme class renamed to Coaster class.
Thalassocracy martial law fixed
upgraded sprites 
New buildings: sacred Cairn, Moai Statues
new unit: Kon-tiki raft
new techs: Sailing, Shamanism

2.6.25
galley/monitor capacity 2
terrain transform tweaked
thalassocracy and federation luxury changed
all spaceship partreq. Space Lift
pyramids tweaked.
units transport description corrected.

2.6.24
Colosseum obsoleted
Teh tree tweaks
Flag ship trident gfx added
Post Office added
caravan-like units: Junk, Cog, Clipper, Freighter, Jetliner
Caravel: transport ship
Brig: navy ship
Pirates Brig, new units exclusive for Barbarians (Barbarians, Pirates, Little Green Men)
Revised effects and buildings constrictions/obsoleting.
Port Facility is now an improved version of Harbour.
Pollution decrease empire size step
Fixed Slavery Abolition effecs
Democracy and Republic tile bonus only for Celebrating

2.6.23
Rapture growth with Pyramids for Tribal and Despotism
New disasters: Tsunami for coastial towns and Fire caused by Fallout 
No incite Fascism except if target have Statue of Libery
New improvments: River Embankments and Fire Station
Pollution tweaked
Artillery tweaked

2.6.22
Several bugfixes and description corrections.
Horse unit attack halved against Palisade.
Bunkers protection againt Bombs.
Culture pts fixed and tweaked

2.6.21
AI gains trade from Palace under Tribal
Migrants no longer Unique
OneAttack for all Air and for direct fire artillery
Weak units hp/cost tweaked