@@ -3,7 +3,7 @@ options = "+Freeciv-2.6-modpack"
 baseURL = "http://149.156.194.203/~mczapkie/fc/augmented/"
 name = "augmented2"
 type = "Modpack"
-version = "2.6.24"
+version = "2.6.27"
 
 [files]
 list =
@@ -112,6 +112,8 @@ list =
   "augmented2/amplio_units/jetliner_PikkaBird.png"
   "augmented2/amplio_units/brig_a.png"
   "augmented2/amplio_units/pirates_brig_a.png"
+  "augmented2/amplio_units/kon-tiki_raft_a.png"
+  "augmented2/amplio_units/pirates_a.png"
   "augmented2/buildings/5_years_plan.png"
   "augmented2/buildings/amphitheater.png"
   "augmented2/buildings/buildings-large.spec"
@@ -144,6 +146,7 @@ list =
   "augmented2/buildings/fire_station_Zimlock.png"
   "augmented2/buildings/embankments.png"
   "augmented2/buildings/post_office_Zimlock.png"
+  "augmented2/buildings/sacred_cairn_a.png"
   "augmented2/buildings_small/5_years_plans.png"
   "augmented2/buildings_small/amphitheaters.png"
   "augmented2/buildings_small/buildings-small.spec"
@@ -174,6 +177,7 @@ list =
   "augmented2/buildings_small/fire_station_s.png"
   "augmented2/buildings_small/embankment_s.png"
   "augmented2/buildings_small/post_office_s.png"
+  "augmented2/buildings_small/sacred_cairn_s.png"
   "augmented2/misc/gov_direct_democracy.png"
   "augmented2/misc/gov_fascism_cc.png"
   "augmented2/misc/gov_first_republic.png"
@@ -273,6 +277,7 @@ list =
   "augmented2/small_units/jetliner_t.png"
   "augmented2/small_units/brig_t.png"
   "augmented2/small_units/pirates_brig_t.png"
+  "augmented2/small_units/kon-tiki_raft_t.png"
   "augmented2/terrain/blank.png"
   "augmented2/terrain/hwroads_a.png"
   "augmented2/terrain/pollution_a.png"
@@ -283,10 +288,13 @@ list =
   "augmented2/terrain/road_bridge_nw_a.png"
   "augmented2/terrain/roads-hwy.spec"
   "augmented2/terrain/terrain.spec"
-  "augmented2/terrain/waterlock.spec"
-  "augmented2/terrain/waterlock_outlet_e_a.png"
-  "augmented2/terrain/waterlock_outlet_n_a.png"
-  "augmented2/terrain/waterlock_outlet_nw_a.png"
+  "augmented2/terrain/volcano.spec"
+  "augmented2/terrain/volcano_base.png"
+  "augmented2/terrain/volcano_a.png"
+  "augmented2/terrain/volcano2_a.png"
+  "augmented2/terrain/volcano3_a.png"
+  "augmented2/terrain/waterlocks.spec"
+  "augmented2/terrain/waterlocks.png"
   "augmented2/terrain/wind_turbines_hex.png"
   "augmented2/terrain_small/farmland_s.png"
   "augmented2/terrain_small/hwroads_s.png"
@@ -298,6 +306,7 @@ list =
   "augmented2/terrain_small/road_bridges.spec"
   "augmented2/terrain_small/roads-hwys.spec"
   "augmented2/terrain_small/terrain-small.spec"
+  "augmented2/terrain_small/volcano_s.png"
   "augmented2/terrain_small/waterlock_outlet_e.png"
   "augmented2/terrain_small/waterlock_outlet_n.png"
   "augmented2/terrain_small/waterlock_outlet_nw.png"
@@ -331,6 +340,8 @@ list =
   "augmented2/wonders/Osaka_Castle_Bagus_Pagestu.png"
   "augmented2/wonders/Fushimi_Inari.png"
   "augmented2/wonders/jousting_tiltyard.png"
+  "augmented2/wonders/moai_statues.png"
+  "augmented2/wonders/colosseum_wonder.png"
   "augmented2/wonders_small/Angkor_Wat_s.png"
   "augmented2/wonders_small/DARPA_s.png"
   "augmented2/wonders_small/Ecole_de_Saint-Cyrs.png"
@@ -358,7 +369,7 @@ list =
   "augmented2/wonders_small/taj_mahal_s.png"
   "augmented2/wonders_small/osaka_castle_s.png"
   "augmented2/wonders_small/fushimi_inari_s.png"
-  "augmented2/wonders_small/jousting_tiltyard_s.png"
+  "augmented2/wonders_small/moai_statues_s.png"
   "doc/culture.xls",       "augmented2/doc/culture.xls"
   "doc/govs.xls",          "augmented2/doc/govs.xls"
   "doc/units_lowcost.xls", "augmented2/doc/units_lowcost.xls"
