@@ -211,5 +211,6 @@ sprites =
 		"u.brig", "augmented2/amplio_units/brig_a"
 		"u.pirates_brig", "augmented2/amplio_units/pirates_brig_a"
 		"u.kon-tiki_raft", "augmented2/amplio_units/kon-tiki_raft_a"
+		"u.pirates", "augmented2/amplio_units/pirates_a"
 	}
 
