@@ -472,11 +472,11 @@ class                = "Land"
 movement_cost        = 2
 defense_bonus        = 25
 food                 = 1
-shield               = 2
+shield               = 1 ;+1 with road
 trade                = 0
 resources            = "Forest Game", "Silk", "Pheasant"
 road_food_incr_pct   = 0
-road_shield_incr_pct = 0
+road_shield_incr_pct = 100
 road_trade_incr_pct  = 0
 base_time            = 1
 road_time            = 4
@@ -508,6 +508,8 @@ color.b              = 19
 helptext             = _("\
 Forests are densely wooded, making agriculture somewhat\
  problematic.\
+"), _("\
+Road is required to get additional shield production.\
 ")
 
 [terrain_grassland]
@@ -563,11 +565,11 @@ class                = "Land"
 movement_cost        = 2
 defense_bonus        = 50
 food                 = 1
-shield               = 1
+shield               = 0 ;+1 with road
 trade                = 0
 resources            = "Coal", "Wine", "Saltpeter"
 road_food_incr_pct   = 0
-road_shield_incr_pct = 0
+road_shield_incr_pct = 100
 road_trade_incr_pct  = 0
 base_time            = 1
 road_time            = 4
@@ -600,6 +602,8 @@ In addition to being amenable to agriculture, Hills are frequently\
 "), _("\
 Cities built on hills are at risk of earthquakes, which can interrupt\
  a city's current project.\
+"), _("\
+Road is required to get additional shield production.\
 ")
 
 [terrain_jungle]
@@ -611,11 +615,11 @@ class                = "Land"
 movement_cost        = 2
 defense_bonus        = 25
 food                 = 1
-shield               = 1
+shield               = 0 ;+1 with road
 trade                = 0
 resources            = "Gems", "Fruit"
 road_food_incr_pct   = 0
-road_shield_incr_pct = 0
+road_shield_incr_pct = 100
 road_trade_incr_pct  = 0
 base_time            = 1
 road_time            = 4
@@ -647,6 +651,8 @@ helptext             = _("\
 Jungles are densely overgrown, making agriculture somewhat\
  problematic. Wheeled Units may not move into jungle without\
  a road.\
+"), _("\
+Road is required to get shield production.\
 ")
 
 [terrain_mountains]
@@ -658,11 +664,11 @@ class                = "Land"
 movement_cost        = 3
 defense_bonus        = 100
 food                 = 0
-shield               = 1
+shield               = 0 ;+1 with road
 trade                = 0
 resources            = "Gold", "Iron", "Uranium"
 road_food_incr_pct   = 0
-road_shield_incr_pct = 0
+road_shield_incr_pct = 100
 road_trade_incr_pct  = 0
 base_time            = 1
 road_time            = 6
@@ -679,7 +685,8 @@ clean_pollution_time = 3
 clean_fallout_time   = 3
 animal               = "None"
 warmer_wetter_result = "no"
-warmer_drier_result  = "volcano"
+warmer_drier_result  = "no"
+;warmer_drier_result  = "volcano"
 cooler_wetter_result = "no"
 cooler_drier_result  = "no"
 native_to            = "Small Land", "Air", "Bomb", "Missile", "Helicopter"
@@ -696,50 +703,52 @@ Reconnaissance (Small Land) units that move into mountains can see an extra spac
  fast land unit ending its turn in mountains without a road will start\
  its next turn with one fewer movement point. Land units (except small ones, including Alpine Troops) may not\
  move into mountains without a road.\
+"), _("\
+Road is required to get shield production.\
 ")
 
-[terrain_volcano]
-name                 = _("Volcano")
-graphic              = "volcano"
-graphic_alt          = "mountains"
-identifier           = "v"
-class                = "Land"
-movement_cost        = 6
-defense_bonus        = 100
-food                 = 0
-shield               = 2
-trade                = 0
-resources            = "Saltpeter"
-road_food_incr_pct   = 0
-road_shield_incr_pct = 0
-road_trade_incr_pct  = 0
-base_time            = 10
-road_time            = 12
-irrigation_result    = "no"
-irrigation_food_incr = 0
-irrigation_time      = 0
-mining_result        = "yes"
-mining_shield_incr   = 0
-mining_time          = 10
-transform_result     = "no"
-transform_time       = 36
-pillage_time         = 3
-clean_pollution_time = 6
-clean_fallout_time   = 6
-animal               = "None"
-warmer_wetter_result = "no"
-warmer_drier_result  = "no"
-cooler_wetter_result = "no"
-cooler_drier_result  = "Mountains"
-native_to            = "Small Land", "Air", "Bomb", "Missile"
-flags                = "NoBarbs", "NoCities", "NotGenerated", "NoFortify"
-property_mountainous = 100
-color.r              = 229
-color.g              = 140
-color.b              = 110
-helptext             = _("\
-Active volcano is rather not suitable to live here.\
-")
+;[terrain_volcano]
+;name                 = _("Volcano")
+;graphic              = "volcano"
+;graphic_alt          = "mountains"
+;identifier           = "v"
+;class                = "Land"
+;movement_cost        = 6
+;defense_bonus        = 100
+;food                 = 0
+;shield               = 2
+;trade                = 0
+;resources            = "Saltpeter"
+;road_food_incr_pct   = 0
+;road_shield_incr_pct = 0
+;road_trade_incr_pct  = 0
+;base_time            = 10
+;road_time            = 12
+;irrigation_result    = "no"
+;irrigation_food_incr = 0
+;irrigation_time      = 0
+;mining_result        = "yes"
+;mining_shield_incr   = 0
+;mining_time          = 10
+;transform_result     = "no"
+;transform_time       = 36
+;pillage_time         = 3
+;clean_pollution_time = 6
+;clean_fallout_time   = 6
+;animal               = "None"
+;warmer_wetter_result = "no"
+;warmer_drier_result  = "no"
+;cooler_wetter_result = "no"
+;cooler_drier_result  = "Mountains"
+;native_to            = "Small Land", "Air", "Bomb", "Missile"
+;flags                = "NoBarbs", "NoCities", "NotGenerated", "NoFortify"
+;property_mountainous = 100
+;color.r              = 229
+;color.g              = 140
+;color.b              = 110
+;helptext             = _("\
+;Active volcano is rather not suitable to live here.\
+;")
 
 [terrain_plains]
 name                 = _("Plains")
