@@ -3,11 +3,13 @@ Augmented2 Ruleset for Freeciv v2.6
 =================================
 
 2.6.27
-Scientist produce only 1 bulb in casie of Anarchy or Fundamental gov.
+Scientist produce only 1 bulb in case of Anarchy or Fundamental gov.
 Taxman produce only 1 gold in case of Anarchy.
-Rare tile Volcano added (by Lua script or global warming)
+Rare tile Volcano added (by Lua script or global warming) - roll back, Lua tile edit not working for 2.6
 Sacred Cairn can be founded enywhere.
 Waterlocks for amplio imported from ampliohexbig
+Tribe more expensive, more hp, to survive killunhomed
+Hills and forest give (additional) shields with road.
 
 2.6.26
 Smooth transition from Temple to Church or Mosque
